Fri Aug 28 05:28:38 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml,survex.iss.in: Process survey data with aven rather
	  than running cavern.

Sat Aug 22 21:14:40 GMT 2015  Olly Betts <olly@survex.com>

	* lib/fr.po: Use fancy quotes.

Wed Aug 19 14:08:14 GMT 2015  Olly Betts <olly@survex.com>

	* lib/fr.po: Merge translation updates from Michel Bovey.

Mon Aug 17 08:32:18 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac,doc/manual.sgml: Update for 1.2.22.

Thu Aug 13 16:12:06 GMT 2015  Olly Betts <olly@survex.com>

	* lib/: Update source references and merge po files.

Thu Aug 13 16:11:03 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c: Correct an example in a TRANSLATORS comment.

Wed Aug 12 19:46:34 GMT 2015  Olly Betts <olly@survex.com>

	* src/readval.c: Anonymous stations can't be exported, so we don't need
	  to set them up ready for implicit exports.

Tue Aug 11 21:31:44 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,tests/Makefile.am,tests/cavern.tst,
	  tests/cmd_set_bad.out: Improve errors for invalid survey names in
	  *equate and *export.

Tue Aug 11 20:34:05 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,tests/cmd_begin_bad.out,tests/cmd_begin_bad.svx:
	  Improve error when *begin is followed by an invalid survey name.

Tue Aug 11 20:02:31 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,tests/: Improve error when *begin is followed by an
	  invalid survey name.

Tue Aug 11 19:44:40 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Aug 07 14:19:04 GMT 2015  Olly Betts <olly@survex.com>

	* src/aven.cc,src/gla-gl.cc: Ensure that the window has a depth buffer.
	  Whether it does by default seems to vary depending on OS and maybe
	  graphics card.  Fixes #55 (terrain is no longer visible through
	  itself), and also the rendering of passage tubes.  Thanks to Martin
	  Green for pointing me in the right direction for finding this fix.
