@@ -1233,3 +1233,13 @@ ro "%s: opţiunea “-W %s” este ambiguă\n"
 ru "%s: опция “-W %s” неоднозначна\n"
 sk "%s: možnosť “-W %s” je dvojznačná\n"
 zh_CN "%s：选项“-W %s”含义不明确\n"
+
+msgid "display percentage progress"
+de "Fortschrittsanzeige in Prozent anzeigen"
+de_CH "Fortschrittsanzeige in Prozent anzeigen"
+en_US "display percentage progress"
+fr "Afficher le pourcentage de progression"
+id "tampilan persentase kemajuan"
+it "mostra la percentuale di progresso"
+ru "отображать ход выполнения задачи в процентах"
+sk "zobraz postup v percento"
