@@ -352,9 +352,6 @@ extern bool fExplicitTitle;
 extern long cLegs, cStns, cComponents;
 extern FILE *fhErrStat;
 extern img *pimg;
-#ifndef NO_PERCENTAGE
-extern bool fPercent;
-#endif
 extern real totadj, total, totplan, totvert;
 extern real min[3], max[3];
 extern prefix *pfxHi[3], *pfxLo[3];
